# RL-demo

./: .gitignore  CLAUDE.md  ISSUE_REWARD_SCALING.md  pyproject.toml  scratchpad-issue-10-summary.md  scratchpad-issue-4-plan.md  scratchpad-issue-9-plan.md  test_fix.py
.claude/: settings.local.json
configs/: README.md
configs/experiments/: baseline.yaml  deep_network.yaml  fast_learning.yaml
docs/: environment.md  torch_rl.md  torchrl_best_practices.md
evaluation_results/: evaluation_report.json
examples/: test_environment.py
notebooks/: test_environment.ipynb
scratchpads/: issue-2-plan.md  phase1_environment_plan.md  phase2_agent_plan.md  phase3_integration_plan.md  pr-12-details.md  pr-13-details.md  scratchpad-issue-6-complete.md  scratchpad-issue-6-plan.md  scratchpad-issue-6-pr.md  scratchpad-issue-7-8-plan.md
scripts/: evaluate_dqn.py  train_dqn.py  validate_config.py
src/rl_demo/: __init__.py
src/rl_demo/configs/: __init__.py  default_config.py
src/rl_demo/envs/: __init__.py  discrete_reservoir_env.py  reservoir_simulator.py
src/rl_demo/models/: __init__.py  qnet.py
src/rl_demo/trainers/: __init__.py  dqn_components.py
src/rl_demo/utils/: logger.py
test_runs/dimension_fix/20250630_100541/: events.out.tfevents.1751270741.nicolass-macbook-pro-1.home.82873.0
tests/: test_discrete_reservoir_env.py  test_dqn_components.py  test_qnet.py  test_reservoir_simulator.py
